--- a/packages/ui/src/styles/system/typography.css
+++ b/packages/ui/src/styles/system/typography.css
@@ -140,7 +140,7 @@ a {
     color: var(--color-text);
   }
 
-  &.active.exact-active {
+  &.active {
     color: var(--color-neutral);
   }
 }
@@ -158,7 +158,7 @@ a.color-bg {
     color: var(--color-bg);
   }
 
-  &.active.exact-active {
+  &.active {
     color: var(--color-neutral);
   }
 }
